barra de navegação + logo

--- a/html/home.html
+++ b/html/home.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
-    <div class="titulo">
-        <h1>Kraft Heinz</h1>
+    <div class="navbar">
+        <div class="logo">
+            <img src="../img/kraftHeinzLogo.png" alt="logo">
+        </div>
+        <div class="navbar-direita">
+            <div>texto1</div>
+            <div>texto2</div>
+            <div>texto3</div>
+        </div>
     </div>
     
 </body>
