--- a/html/home.html
+++ b/html/home.html
@@ -13,9 +13,9 @@
             <img src="../img/kraftHeinzLogo.png" alt="logo">
         </div>
         <div class="navbar-direita">
-            <div>texto1</div>
-            <div>texto2</div>
-            <div>texto3</div>
+            <a href="./texto1.html"><div>texto1</div></a>
+            <a href="./texto2.html"><div>texto2</div></a>
+            <a href="./texto3.html"><div>texto3</div></a>
         </div>
     </div>
     
