--- a/html/home.html
+++ b/html/home.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <img src="../img/kraftHeinzLogo.png" alt="logo">
+            <a href="./home.html"><img src="../img/kraftHeinzLogo.png" alt="logo"></a>
         </div>
         <div class="navbar-direita">
             <a href="./texto1.html"><div>texto1</div></a>
