deixando mais bonitinho

--- a/html/home.html
+++ b/html/home.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link href="https://db.onlinewebfonts.com/c/bd317adf74e5e7e564eb61ce9926cc6d?family=Gotham" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KraftHeinz</title>
     <script src="../js/home.js"></script>
@@ -17,6 +18,13 @@
             <a href="./texto2.html"><div>texto2</div></a>
             <a href="./texto3.html"><div>texto3</div></a>
         </div>
+    </div>
+
+    <div class="introducao">
+        <div>O que é Kraft Heinz?</div>
+    </div>
+    <div class="texto">
+        <p>A Kraft Heinz Company é uma multinacional norte-americana de alimentos sediada em Chicago, Illinois, que é atualmente a 5ª maior empresa de alimentos e bebidas mundo, resultante da fusão da Kraft Foods com Heinz. No Brasil a Kraft Heinz Company é detentora das marcas Heinz, Kraft, Hemmer e Quero, e é líder nos segmentos de ketchup, molhos e vegetais.</p>
     </div>
     
 </body>
